# lego-builder-for-blender

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  blender_manifest.toml  mkdocs.yml  preferences.py  pyproject.toml  registration.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: architecture_decision.yml  bug_report.yml  feature_request.yml  performance.yml
.github/workflows/: ci.yml  pages.yml
docs/: ARCHITECTURE.md  DATA_MODEL.md  DEVELOPMENT_WORKFLOW.md  ENGINEERING.md  GLOSSARY.md  PRODUCT.md  PROJECT_CONTEXT.md  ROADMAP.md  VISION.md
docs/adr/: README.md
help/: developer-notes.md  faq.md  future-brick-builder.md  future-part-browser.md  getting-started.md  index.md  installation.md  ldraw-setup.md  lego-library-setup.md  refreshing-indexing-parts.md  troubleshooting.md
operators/: __init__.py  index_library.py  preferences.py  workspace.py
runtime/: __init__.py  state.py
tests/: test_library_index.py  test_library_validation.py  test_workspace.py
ui/: __init__.py  panels.py
utils/: __init__.py  paths.py
workspace/: __init__.py  config.py  structure.py  validation.py
