[project]
name = "lego-builder-for-blender"
version = "0.1.0"
description = "A Blender-native LEGO building environment."
authors = [
    { name = "LEGO Builder for Blender contributors", email = "placeholder@example.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["blender", "lego", "addon", "3d"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = []
